# scrcpy-partner-win

./: .eslintignore  .eslintrc.cjs  .gitignore  LICENSE.md  README.md  index.html  memo.txt  package-lock.json  package.json  record.html  splashscreen.html  todo-list.txt  tool.html  tsconfig.json  update-db.js  vite.config.ts
libs/: info.txt
prisma/: migrate-db.bat  schema.prisma
scripts/: build-app.js  setup-dev.js  update-db.js
src/: App.svelte  globals.d.ts  main.ts  record.ts  splashscreen.ts  style.css  tool.ts
src-mini-prisma/: dev.js  main.js  package.json  server.js  test-db.js  test.js  why.txt
src-scrcpy-control/: call.js  main.py  main.spec
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: from.txt  icon.icns
src-tauri/src/: cmds.rs  funcs.rs  main.rs  sendkey.rs  state.rs  tauri_funcs.rs  watcher.rs  wins.rs
src/i18n/: en.json  index.ts  zh.json  zh.ts
src/lib/: Config.svelte  Configs.svelte  DeviceCard.svelte  Devices.svelte  Greet.svelte  Home.svelte  HomeWithI18n.svelte  Loading.svelte  LoadingWithI18n.svelte  Record.svelte  RecordWithI18n.svelte  Sidebar.svelte  Tool.svelte  ToolWithI18n.svelte
src/lib/Record/: AdbCmd.ts  Apps.svelte  (+8 more)
src/store/: config-form.ts  config-select-form.ts  configForm.ts  confirm-dialog.ts  device-form.ts  dialog-form.ts  general-dialog-form.ts  general-loading.ts  general-msg.ts  index.ts
src/types/: index.ts
src/utils/: ScrcpyControlClient.ts  app.ts  configs.ts  devices.ts  keycode.ts  prisma-field-filter.ts  prisma-like-client.ts  record.ts  scrcpy.ts  sidebar-config.ts  tauri.ts
(+15 files in other folders)
